<resources>
    <string name="Distributor_id">Distributor ID or Customer ID</string>
    <string name="Password">Password</string>
    <string name="app_name">Prouman</string>
    <string name="btn_guest">GUEST</string>
    <string name="btn_member">MEMBER</string>
    <string name="business">The Business</string>
    <string name="hinttitle">Title</string>
    <string name="hint_message">Message</string>
    <string name="call">Call</string>
    <string name="change_language">Change Language</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="guest_txt">Guest Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="send_sms">touch a message to send</string>
    <string name="join_kyani">Join Prouman</string>
    <string name="join_viral_ninja">Join Prouman</string>
    <string name="viral_ninja">Join Prouman</string>
    <string name="language">Language:</string>
    <string name="listenTheWebinar">Listen to the Webinar</string>
    <string name="listenwebniar">LISTEN TO THE WEBINAR</string>
    <string name="logout">Logout</string>
    <string name="member_login">Member Login</string>
    <string name="name">Name:</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number:</string>
    <string name="rerfferal_ode">Referral Code</string>
    <string name="send">Send</string>
    <string name="shop_product">Shop Product</string>
    <string name="shop">Shop Prouman</string>
    <string name="shop_prouman">Shop Prouman</string>
    <string name="join_viral_ninja_contact">Join Prouman</string>
    <string name="siteName">Site Name:</string>
    <string name="video">Video</string>
    <string name="subscribe_prouman">Subscribe to Prouman</string>
    <string name="watchTheWebinar">Watch the Webinar</string>
    <string name="category">Category:</string>
    <string name="video_list">Video List</string>
    <string name="video_player">Watch the Video</string>
    <string name="videos">Videos</string>
    <string name="bottom_note">*This referral code provided by one of our distributor.</string>
    <string name="welcome_to">Welcome !</string>
    <string name="team_ninja">Prouman</string>
    <string name="watch_webinar">WATCH THE WEBINAR</string>
    <string name="login">Login</string>
    <string name="title_activity_guest_nav">Guest Area</string>
    <string name="product">Product</string>
    <string name="typeofprospect">Type Of Prospect</string>
    <string name="navigation_drawer_open">Open browser</string>
    <string name="navigation_drawer_close">Close browser</string>
    <string name="back_icon">&#8592;</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="copright">Copyright</string>
    <string name="desclaimer">Desclaimer notice</string>
    <string name="join_us">Join us</string>
    <string name="join_affilation">Join LifeWave</string>
    <string name="website">Website</string>
    <string name="contactme">Contact me:</string>
    <string name="notification">Notifications</string>
    <string name="compose_notification">Compose Notification</string>
    <string name="send_notification">Send Push Notification</string>
    <string name="notification_detail">Notification Detail</string>
    <string name="allcontacts">All Contacts</string>
    <string name="connected">Connected Contacts</string>
    <string name="disconnected">Inactive Contacts</string>
    <string name="sync">Sync</string>
    <string name="member">Member</string>
    <string name="Viral_Message">Viral Message</string>
    <string name="premium_video">Private Video</string>
    <string name="Accademy">Academy</string>
    <string name="Add_prospect">Add prospect</string>
    <string name="leftarrow"> &lt; </string>
    <string name="nav_msg">Compose a message</string>
    <string name="native_form">Add Prospect</string>
    <string name="surname">Surname</string>
    <string name="privacy">Privacy</string>
    <string name="submit">Submit</string>
    <string name="isubmit">invia</string>
    <string name="selectForm">Select Form</string>
    <string name="contactList">Contacts</string>
    <string name="sunrise">Sunrise </string>
    <string name="sunset">Sunset</string>
    <string name="nitro_fx">Nitro Fx</string>
    <string name="nitro_xtrime">Nitro Xtreme</string>
    <string name="knitro_xtrime">Kyani Nitro Xtreme</string>
    <string name="kyani_powder">Kyani Powder</string>
    <string name="kyani_flour">Fleuresse</string>
    <string name="kyani_powder_2">Kyani Powder</string>
    <string name="pro_testominal">Products Testimonials</string>
    <string name="product_category">Product Category</string>
    <string name="business_testominals">Business Testimonials </string>
    <string name="private_video">Private Video </string>
    <string name="video_directory">Video Directory </string>
    <string name="video_hub">Video Hub </string>
    <string name="Funne_business">Funnel Business</string>
    <string name="Funnel_prodotto">Funnel Prodotto</string>
    <string name="Form">Form </string>
    <string name="Podcast">Podcast</string>
    <string name="Webinar">Webinar</string>
    <string name="Watch_the_webinar">Watch the Webinar </string>
    <string name="listen_the_webinar">Listen the Webinar</string>
    <string name="Push">Push</string>
    <string name="Viral_ninja">Join Prouman</string>
    <string name="kyani_main">Kyani</string>
    <string name="prova">Test</string>
    <string name="vip_card">VIP CARD </string>
    <string name="seve_day_empty">Set Up Moneysite System before use this section , then Retry </string>
    <string name="s_days_pack">7 Day Pack </string>
    <string name="Products">Products</string>
    <string name="reumatismi">Rheumatism</string>
    <string name="insonnia"> Insonnia</string>
    <string name="Cholesterol">Cholesterol</string>
    <string name="stress">Stress </string>
    <string name="mal_du_testa">Headache </string>
    <string name="Problems">Problems</string>
    <string name="Pressione">Pressione</string>
    <string name="Desease_category">Desease Category</string>
    <string name="Headache">Headache </string>
    <string name="Menstrual_pains">Menstrual pains</string>
    <string name="Asthma">Asthma</string>
    <string name="no_sex">No Sex</string>
    <string name="Weight_loss">Weight loss </string>
    <string name="Constipation">Constipation </string>
    <string name="Skincare">Skin care </string>
    <string name="viral_mail">Viral Mail</string>
    <string name="product_info">Products Info</string>
    <string name="accademy">Academy</string>
    <string name="form">Form</string>
    <string name="kyani">Kyani</string>
    <string name="section_under_review">Section under review . We are working for your business</string>
    <string name="podcast_underreview">we are working for your business … stay tuned </string>
    <string name="rss_blog">Rss Blog</string>
    <string name="no_video_found">No Video found for this category</string>
    <string name="read_condition">Read Privacy Policy</string>
    <string name="share">Share</string>
    <string name="chooser_title">Choose Action</string>
    <string name="btnreactive">Reactive</string>
    <string name="btnshare">Shared</string>
    <string name="sunrisetesttimonial">Sunrise Testimonials</string>
    <string name="sunsettestimonials">Sunset Testimonials</string>
    <string name="nitrofxtimonials">Nitro Fx Testimonials </string>
    <string name="nitroxtremetimonials">Kyani Nitro Xtreme</string>
    <string name="kyanipowdertimonials">Kyani Powder Testimonials</string>
    <string name="fleu_test">Fleuresse Testimonials</string>
    <string name="google_play_service_out_date">Google play service is out of date</string>
    <string name="google_play_service_unknown_error">UNKNOWN_ERROR_CODE( %1s )</string>
    <string name="google_play_service_unsupported_device">Your device does not support Google Play Service</string>
    <string name="google_play_service_not_installed">Google Play Service not installed</string>
    <string name="title_activity_login_user_notification_list">Notifications</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_select_language">Change Language</string>
    <string name="btn_change_language">CHANGE LANGUAGE</string>
    <string name="label_text">Language English</string>
    <string name="txt_back">BACK</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="signin">SIGN IN</string>
    <string name="ref_code">Referral Code</string>
    <string name="cont">Contact</string>
    <string name="mcontacts">My Contacts</string>
    <string name="received">Received</string>
    <string name="admin">Admin</string>
    <string name="sent">Sent</string>
    <string name="no_noti_rec">No Notification received</string>
    <string name="pleaseentername">Please Enter Value</string>
    <string name="enterdate">Please enter date</string>
    <string name="accept">Please accept</string>
    <string name="notificationtitle">please enter notification tittle</string>
    <string name="notificationmessage">please enter notification message</string>
    <string name="pushtitle">Push Title:- </string>
    <string name="pushmessage">Push Message:- </string>
    <string name="submit_password">SUBMIT PASSWORD</string>
    <string name="play_info">Enter the Video password, to watch the video!</string>
    <string name="link_pages">Link Pages</string>
    <string name="capture_pages">Capture pages</string>
    <string name="video_capture_pages">Video Capture pages</string>
    <string name="video_pages">Video pages</string>
    <string name="oms_pages">OMS Pages</string>
    <string name="group_of_contacts">Group Of contacts</string>
    <string name="tags">Tags</string>
    <string name="pages">Pages</string>
    <string name="tagpagetitle">Tags</string>
    <string name="no_contact">No Contact found</string>
    <string name="addcompign">Add To Campaign</string>
    <string name="addbroadcast">Add To Broadcast List</string>
    <string name="addcontact">Add Contact Group</string>
    <string name="contact_sendsms">Send SMS</string>
    <string name="contact_sendemail">Send Email</string>
    <string name="contact_export">Export Contacts</string>
    <string name="transfer_prospects">Transfer Prospects</string>
    <string name="edit_prospects">Edit Prospects</string>
    <string name="delete_prospects">Delete Prospects</string>
    <string name="dateto">Date From</string>
    <string name="datefrom">Date To</string>
    <string name="flocation">Find By Location</string>
    <string name="fname">First Name</string>
    <string name="sname">Last Name</string>
    <string name="title_activity_addto_campign">AddtoCampign</string>
    <string name="title_activity_addto_broadcast_list">AddtoBroadcastList</string>
    <string name="add_campigntab1">Email Campaigns</string>
    <string name="add_campigntab2">Sms Campaigns</string>
    <string name="add_campigntab3">Push Campaigns</string>
    <string name="no_campign">No Campign Found</string>
    <string name="title_activity_addto_group">Add to Group</string>
    <string name="title_activity_addto_broadcast">Add to Broadcast</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="street">Street Address</string>
    <string name="zipcode">Zip Code</string>
    <string name="dob">Date of Bifrth</string>
    <string name="device">Device</string>
    <string name="browse">Browse</string>
    <string name="age">Age</string>
    <string name="Distributor_id_email">Distributor ID or Email</string>
    <string name="transfer">Transfer</string>
    <string name="about">About</string>
    <string name="terms">Terms</string>
</resources>