<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListContactAct">

    <!--<item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:menuCategory="secondary"
        app:showAsAction="always"
        android:title="Search"/>-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_serach_grey"
        app:showAsAction="always"
        android:title="Search"/>
    <item
        android:id="@+id/action_addcompign"

        app:showAsAction="never"
        android:title="@string/addcompign"/>
    <item
        android:id="@+id/action_broadcast"

        app:showAsAction="never"
        android:title="@string/addbroadcast"/>
    <item
        android:id="@+id/action_addtogroup"

        app:showAsAction="never"
        android:title="@string/addcontact"/>
    <item
        android:id="@+id/action_sendsms"

        app:showAsAction="never"
        android:title="@string/contact_sendsms"/>
    <item
        android:id="@+id/action_sendemail"

        app:showAsAction="never"
        android:title="@string/contact_sendemail"/>
    <item
        android:id="@+id/action_exportcontact"

        app:showAsAction="never"
        android:title="@string/contact_export"/>
    <item
        android:id="@+id/action_transferprospects"

        app:showAsAction="never"
        android:title="@string/transfer_prospects"/>
    <item
        android:id="@+id/action_editprospects"

        app:showAsAction="never"
        android:title="@string/edit_prospects"/>
    <item
        android:id="@+id/action_deleteprospects"

        app:showAsAction="never"
        android:title="@string/delete_prospects"/>

</menu>