<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListContactAct">

    <!--<item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:menuCategory="secondary"
        app:showAsAction="always"
        android:title="Search"/>-->
    <item
        android:id="@+id/action_allcontacts"

        app:showAsAction="never"
        android:title="@string/allcontacts"/>
    <item
        android:id="@+id/action_connected"

        app:showAsAction="never"
        android:title="@string/connected"/>
    <item
        android:id="@+id/action_disconnected"

        app:showAsAction="never"
        android:title="@string/disconnected"/>
<item
    android:id="@+id/action_sync"

    app:showAsAction="never"
    android:title="@string/sync"/>
</menu>