<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_white"
        android:gravity="center"
        android:textSize="20.0sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/icon_txt_lock"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_white"
        android:gravity="center"
        android:textSize="30.0sp"
        android:text="PRIVATE"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_white"
        android:gravity="center"
        android:textSize="14.0sp"
        android:text="@string/play_info" />
    <EditText android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:drawablePadding="20dp"
        android:background="@drawable/whiteback_roundcorner"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_margin="15dp"
        android:drawableLeft="@mipmap/ic_lock_outline_white_36dp"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:background="#55ffffff"
        android:textColor="@color/text_color_white"
        android:text="@string/submit_password"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:background="@color/red"
        android:textColor="@color/text_color_white"
        android:text="@string/txt_back"/>
</LinearLayout>