<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context="com.prouman.activity.LoginSelectionActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:src="@drawable/icon_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/center_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/circleviewback"
        ></androidx.appcompat.widget.AppCompatImageView>
<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btnGuestLogin"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/center_img"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:text="@string/guest_txt"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:background="@drawable/buttonround_lightgrey"
    android:layout_marginTop="20dp"
    android:textColor="@color/black"
    ></androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMemberLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/center_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColor="@color/black"
        android:text="@string/member_login"
        android:background="@drawable/buttonround_lightgrey"
        ></androidx.appcompat.widget.AppCompatButton>
<androidx.appcompat.widget.AppCompatButton

    android:id="@+id/btnForgotPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:background="@android:color/transparent"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@+id/btnGuestLogin"
    android:text="@string/forgot_pass"
    android:textColor="@color/white">

</androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangeLanguage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:background="@drawable/buttonround_lightgrey"
        android:text="@string/change_language"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeLanguage"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/llPrivacy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAbout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTerms"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>