
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/link_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/dark_custom_button"
            android:gravity="center"
            android:visibility="gone"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/back_icon"
                android:textColor="#A29FAD"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_back"
                android:textColor="#A29FAD"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/member_login"
            android:textColor="@color/text_color_white"
            android:visibility="gone"
            android:textSize="25sp"/>

        <!--  Email Label -->
<LinearLayout
    android:id="@+id/llEdit1"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/logineditbackground"
    android:elevation="15dp"
    android:shadowDy="5"
    android:drawableTint="@color/black"
    android:shadowDx="5"
    android:shadowColor="@color/black"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:shadowRadius="15"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="horizontal"
    >
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/logineditbackground"-->
<!--        android:elevation="15dp"-->
<!--        android:shadowDy="5"-->
<!--        android:drawableTint="@color/black"-->
<!--        android:shadowDx="5"-->
<!--        android:shadowColor="@color/black"-->
<!--        android:paddingRight="15dp"-->
<!--        android:paddingLeft="15dp"-->
<!--        android:shadowRadius="15"-->
<!--        android:orientation="horizontal">-->
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@mipmap/ic_perm_identity_white_48dp"
        android:tint="@color/black"
        android:layout_gravity="center"

        android:layout_marginLeft="8dp">

    </androidx.appcompat.widget.AppCompatImageView>
        <EditText android:id="@+id/input_distributor_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/Distributor_id"
            android:textColor="@color/black"
            android:textColorHint="#1e1e1e"
            />
<!--    </LinearLayout>-->
</LinearLayout>
        <!--  Password Label -->
            <LinearLayout
                android:id="@+id/llEdit2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/logineditbackground"
                android:elevation="15dp"
                android:shadowDy="5"
                android:drawableTint="@color/black"
                android:shadowDx="5"
                android:shadowColor="@color/black"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:shadowRadius="15"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/ic_perm_identity_white_48dp"
                    android:tint="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"/>
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:textColor="@color/black"
            android:textColorHint="#1e1e1e"
            />
            </LinearLayout>
<TextView
    android:id="@+id/txt_forgotpass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="right"
    android:textStyle="bold"
    android:layout_marginTop="10dp"
    android:text="@string/forgot_pass"
    android:textColor="#1e1e1e"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:background="@drawable/buttongreennew"
            android:textColor="@color/white"
            android:text="@string/signin"/>

     <!--   <Button
            android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp"
            android:text="Back to Home"
            android:textColor="#ffffff"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:textSize="16dip" />-->

    </LinearLayout>

    </LinearLayout>
<!--    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/icon_logo"
        android:layout_gravity="center"/>-->
</LinearLayout>