<?xml version="1.0" encoding="utf-8"?>

<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
      android:background="@color/black"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/link_signup"
        android:src="@drawable/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="56dp"
        android:paddingLeft="44dp"
        android:paddingRight="44dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/guest_txt"
            android:textColor="@color/text_color_white"
            android:visibility="gone"
            android:textSize="25sp"/>


        <!--  Email Label -->
        <LinearLayout
            android:id="@+id/llFullEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/logineditbackground"
            android:elevation="15dp"
            android:shadowDy="5"
            android:drawableTint="@color/black"
            android:shadowDx="5"
            android:shadowColor="@color/black"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:shadowRadius="15"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/ic_perm_identity_white_48dp"
                android:tint="@color/black"
                android:layout_gravity="center"

                android:layout_marginLeft="8dp">

            </androidx.appcompat.widget.AppCompatImageView>
        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/ref_code"
            android:textColor="@color/black"
            android:textColorHint="#1e1e1e"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/check_term"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorLink="@color/black"
            android:buttonTint="@color/black"
            android:textColor="@color/black"/>
        <CheckBox
            android:id="@+id/check_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorLink="@color/black"
            android:buttonTint="@color/black"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:background="@drawable/buttongreennew"
            android:textColor="@color/white"
            android:text="@string/signin"/>

       <!-- <Button
            android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp"
            android:text="Back to Home"
            android:textColor="#ffffff"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:textSize="16dip" />-->

        <TextView
            android:id="@+id/link_signu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"

            android:text="@string/bottom_note"
            android:textColor="@color/black"

            android:gravity="center"
            android:textSize="16dip" />

    </LinearLayout>
 <!--   <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/icon_logo"
        android:visibility="gone"
        android:layout_gravity="center"/>-->
</LinearLayout>
<!--
</ScrollView>-->
